Add 64bit wixproj files for for EC_40, Perl, and Python
* update .gitignore so that changes aren't hidden

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,9 @@ bld/
 [Oo]bj/
 [Ll]og/
 /[Oo]utput/
-/install*/
+/installer/MergeModules
+/installer/**/bin
+/installer/**/obj
 /aclocal.m4
 /autogen.err
 /config.log
